@@ -1772,9 +1772,9 @@
       <method name="GetInternalPaintInfo" cname="gdk_window_get_internal_paint_info">
         <return-type type="void"/>
         <parameters>
-          <parameter type="GdkDrawable**" name="real_drawable"/>
-          <parameter type="gint*" name="x_offset"/>
-          <parameter type="gint*" name="y_offset"/>
+          <parameter type="GdkDrawable**" name="real_drawable" pass_as="out"/>
+          <parameter type="gint*" name="x_offset" pass_as="out"/>
+          <parameter type="gint*" name="y_offset" pass_as="out"/>
         </parameters>
       </method>
       <method name="GetOrigin" cname="gdk_window_get_origin">
