@@ -159,6 +159,30 @@
 </rule>
 <rule>
   <class name="GdkWindow">
+    <method>GetInternalPaintInfo</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="type">GdkDrawable*</filter>
+      <name>pass_as</name>
+      <value>out</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GdkWindow">
+    <method>GetInternalPaintInfo</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="type">gint*</filter>
+      <name>pass_as</name>
+      <value>out</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GdkWindow">
     <method>GetOrigin</method>
   </class>
   <data>
