@@ -1,3 +1,14 @@
+2003-09-06  Alp Toker  <alp@atoker.com>
+
+	* api/gdk-api.xml:
+	* sources/Gdk.metadata: out params for Gdk.Window.GetInternalPaintInfo
+	* glade/makefile.win32: new win32 makefile
+	* glue/win32dll.c:
+	* glue/makefile.win32: Patch to remove cygwin1.dll dependency on win32
+	from Todd Berman <tberman@gentoo.org>
+	* glue/makefile.win32: Update list of sources
+	* glue/Makefile.am: Remind people to keep makefile.win32 up to date
+
 2003-09-03 Aleksey Sanin <aleksey@aleksey.com>
  
  	* parser/GAPI/Metadata.pm: enable enums processing using
